k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring-boot-crud-dep
  labels:
    app: spring-boot-crud-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: spring-boot-crud-dep

  template:
    metadata:
      labels:
        app: spring-boot-crud-app

    spec:
      containers:
        - name: spring-boot-crud-app
          image: ctli/kubernetes-deploy:v1
          ports:
            - containerPort: 8080

#      volumes:
#        - name: config-volume
#          configMap:
#            name: spring-boot-crud-cm
#
#        - name: secret-volume
#          secret:
#            secretName: spring-boot-crud-secrets
