k8s-service.yml
apiVersion: v1
kind: Service

metadata:
  name: spring-boot-crud-svc

spec:
  type: NodePort
  selector:
    app: spring-boot-crud-app

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
