k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-example

spec:

  rules:

    - host: "foo.bar.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: k8s-spring-boot-crud-svc
                port:
                  number: 80

# install ingress controller for above ingress resource to affect
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.3.0/deploy/static/provider/cloud/deploy.yaml
#kubectl get pods --namespace ingress-nginx


#    - host: "*.foo.com"
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/foo"
#            backend:
#              service:
#                name: k8s-service
#                port:
#                  number: 80
